fixed alignment of content

--- a/CSS Task/style2.css
+++ b/CSS Task/style2.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 body{
     margin: 0;
     padding: 0;
@@ -6,19 +10,28 @@ body{
 .body{
     margin: auto;
     padding: 0px 5px 5px 5px;
-    max-width: 1400px;
+    max-width: 1000px;
     background: white;
 }
+
 .navbar{
     background: rgb(95, 153, 234);
-    padding: 3px;
+    max-width: 100%;
 }
+.container1{
+    max-width: 100%;
+    padding: 0 70px;
+    margin: auto;
+    position: relative;
+}
+
 img{
     max-height: 50px;
-    margin-left: 3em;
 }
-.navbar ul{
-    float: right;
+.container1 ul{
+    position: absolute;
+    top: 0;
+    right: 70px;
     list-style-type: none;
     display: flex;
 }
@@ -34,38 +47,48 @@ li a{
 li a:hover{
     background: white;
     color: black;
+    font-weight: 600;
 }
 .banner{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 200px;
-    background: rgb(51, 71, 111);
-}
-.
+    max-width: 100%;
+    height: 10rem;
 }
 .right{
     transform: scaleX(-1);
 }
 .text{
-    font-size: 4rem;
+    font-size: 50px;
     color: white;
-
-    font-weight: 800;
-    
 }
 
+.main-container{
+    max-width: 100%;
+    background: rgb(51, 71, 111);
+}
+.container2{
+    max-width: 100%;
+    padding: 0 70px;
+    margin: auto;
+}
 main{
-    display: flex;
-    margin: 10px 50px;
+    max-width: 100%;
     height: 350px;
-
+}
+.container3{
+    display: flex;
+    padding: 0 70px;
+    margin: auto;
+    max-width: 100%;
+    height: 100%;
 }
 .leftSide{
     display: flex;
     position: relative;
     width: 45%;
+    margin: 5px 5px 5px 0;
 }
 .leftUp{
     width: 100%;
@@ -75,7 +98,7 @@ main{
 .leftDown{
     position: absolute;
     top: 30px;
-    left: -30px;
+    left: -12px;
     height: 18rem;
     width: 13em;
     background: rgb(212, 141, 198);
@@ -85,7 +108,7 @@ main{
     flex-direction: column;
     align-content: space-between;
     width: 55%;
-    margin: 10px;
+    margin: 5px 0 5px 5px;
 }
 .up{
     height: 60%;
